--- a/core/templates/core/reports.html
+++ b/core/templates/core/reports.html
@@ -123,7 +123,7 @@
                                             <td>{{ item.4 }}</td>
                                             <td>{{ item.6 }}</td>
                                             
-                                            <td><a href="#">View</a></td>
+                                            <td><a href="{%url 'report' item.0%}">View</a></td>
                                         </tr>
                                         {%endfor%}
                                     </tbody>
