adding custom port range

--- a/core/templates/core/hostdiscovery.html
+++ b/core/templates/core/hostdiscovery.html
@@ -56,7 +56,7 @@
                               <div class="form-check">
                                 <input class="form-check-input" name="ping_option" value="off" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
                                 <label class="form-check-label" for="flexRadioDefault2">
-                                  ARP method
+                                  ARP method (Inside LAN only)
                                 </label>
                               </div>
                         </div>
