--- a/core/templates/core/scanreport.html
+++ b/core/templates/core/scanreport.html
@@ -111,7 +111,7 @@
                                             <li class="list-group-item">Done by : {{user_name}}</li>
                                             
                                             <li class="list-group-item">Scan Date : {{item.6}}</li>
-                                            <li class="list-group-item">PDF : <a href="#">Report</a></li>
+                                            <li class="list-group-item">PDF : <a href="#"><i class="fa-solid fa-file-export"></i></a></li>
                                             
                                         {%endfor%}
                                       </ul>
