--- a/core/templates/core/networkscan.html
+++ b/core/templates/core/networkscan.html
@@ -20,7 +20,8 @@
                       </div>
                       <div class="col">
                         <label class="my-1 mr-2" for="ip_addr">IP address or Network subnet</label>
-                        <input type="text" name="ip_addr" id="ip_addr" class="form-control" placeholder="EX : 192.168.1.1 or 192.168.1.0/24">
+                        <input type="text" name="ip_addr" id="ip_addr" class="form-control" placeholder="EX: 192.168.1.1" pattern="\b(?:\d{1,3}\.){3}\d{1,3}\b" title="Please enter a valid IPv4 address">
+
                       </div>
                     </div>
                     <div class="row m-3">
