--- a/core/templates/core/hostdiscovery.html
+++ b/core/templates/core/hostdiscovery.html
@@ -16,11 +16,11 @@
                     <div class="row m-3">
                       <div class="col">
                         <label class="my-1 mr-2" for="scan_name">Scan Name</label>
-                        <input type="text" id="scan_name" name="scan_name" class="form-control" placeholder="EX : Company1">
+                        <input type="text" id="scan_name" name="scan_name" class="form-control" placeholder="EX : Company1" required>
                       </div>
                       <div class="col" id="ipInput">
                         <label class="my-1 mr-2" for="scan_name">Network subnet</label>
-                        <input type="text" name="subnet" class="form-control" placeholder="EX : 192.168.1.0/24">
+                        <input type="text" name="subnet" id="subnet" class="form-control" placeholder="EX: 192.168.1.0/24" pattern="\b(?:\d{1,3}\.){3}\d{1,3}/\d{1,2}\b" title="Please enter a valid IPv4 network in CIDR notation" required>
                       </div>
                     </div>
                     <div class="row m-3">
@@ -34,7 +34,7 @@
                                 {%for user in users%}
                                     <li>                            
                                         <div class="form-check m-2">
-                                            <input class="form-check-input" type="checkbox" name="{{user.0}}" value="{{user.0}}" id="flexCheckDefault">
+                                            <input class="form-check-input" type="checkbox" name="{{user.0}}" value="{{user.0}}" id="flexCheckDefault" required>
                                             <label class="form-check-label" for="flexCheckDefault">
                                             {{user.1}}
                                             </label>
