adding subdomain enum in webscanner

--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -99,7 +99,7 @@
                                     <img class="card-img-top mx-auto " style="width: 9rem; height: 12rem;" src="{%static "web.png"%}" alt="Card image cap">
                                     <div class="card-body" >
                                         <p class="card-text">Web Vulnerability scan</p>
-                                        <a href="#" class="btn btn-primary">New scan</a>
+                                        <a href="{%url 'webscan'%}" class="btn btn-primary">New scan</a>
                                     </div>
                                 </div>
                             </div>
